login page connect to database

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
+    "bcrypt": "^5.1.0",
     "cocoapods": "^0.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose-unique-validator": "^3.1.0",
     "pg": "^8.8.0",
     "rxjs": "~6.6.0",
     "swiper": "^8.4.2",
